# PolarBar

./: .gitignore  README.md  pyproject.toml
data/: PS1-10jh_gAperture_photons.csv
polarbar/: analysis.py
